fix background on y overflow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,6 +6,6 @@
     color: #fff;
 }
 
-.page {
+html, .page {
     background-color: #000001;
 }
